--- a/index.html
+++ b/index.html
@@ -7,8 +7,44 @@
     <title>Document</title>
     <link rel="stylesheet" href="./dist/styles/styles.min.css" />
   </head>
-  <body>
-    <h1>pidars</h1>
+  <body class="page">
+    <header class="page__header header">
+      <div class="container">
+        <div class="header__wrapper">
+          <div class="header__wrapper header__wrapper--row">
+            <img src="./dist/img/Logo 3.svg" alt="logo" class="header__logo" />
+            <button class="buy">Buy Now</button>
+            <button class="burger">
+              <span class="burger__line"></span>
+            </button>
+          </div>
+          <nav class="header__nav nav">
+            <ul class="nav__list menu">
+              <li class="menu__item">
+                <a class="menu__link" href="#"> Overview </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#"> About Fork </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#"> Buying Options </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#"> Support </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__content">
+          <h1 class="header__title">Fork App</h1>
+          <p class="header__slogan">
+            A Real Gamechanger In The World Of Web-Development
+          </p>
+          <p class="header__text">v. 2.8 For Mac and Windows</p>
+          <button class="download">Download For Free Now</button>
+        </div>
+      </div>
+    </header>
     <script src="./dist/js/scripts.min.js"></script>
   </body>
 </html>
