--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Forkio</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/styles/styles.min.css" />
   </head>
   <body class="page">
@@ -51,6 +53,136 @@
         </div>
       </div>
     </header>
+
+
+
+
+
+
+
+
+
+
+
+    <section class="about">
+      <div class="container">
+        <p class="app-text">Unlimited 30-Days Trial Period</p>
+          <h2 class="about__tittle">Revolutionary
+              <p>editor</p>
+          </h2>
+          <p class="about__description">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
+              vulputate
+              dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+          <div class="flex-wrapper flex-wrapper--center">
+              <div class="about__github-links-container flex-wrapper">
+                  <a href="#" class="about__github-link flex-wrapper">
+                      <svg class="octicon octicon-eye v-align-text-bottom" viewBox="0 0 16 16" version="1.1"
+                          width="16" height="16" aria-hidden="true">
+                          <path fill-rule="evenodd"
+                              d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z">
+                          </path>
+                      </svg>
+                      <span class="about__github-link_text">Watch</span></a>
+                  <a href="#" class="about__github-link_count">687</a>
+              </div>
+              <div class="about__github-links-container flex-wrapper">
+                  <a href="#" class="about__github-link flex-wrapper">
+                      <svg class="octicon octicon-star v-align-text-bottom" viewBox="0 0 14 16" version="1.1"
+                          width="14" height="16" aria-hidden="true">
+                          <path fill-rule="evenodd"
+                              d="M14 6l-4.9-.6 4L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z">
+                          </path>
+                      </svg>
+                      <span class="about__github-link_text">Star</span></a>
+                  <a href="#" class="about__github-link_count">14,646</a>
+              </div>
+              <div class="about__github-links-container flex-wrapper">
+                  <a href="#" class="about__github-link flex-wrapper">
+                      <svg class="octicon octicon-repo-forked v-align-text-bottom" viewBox="0 0 10 16" version="1.1"
+                          width="10" height="16" aria-hidden="true">
+                          <path fill-rule="evenodd"
+                              d="M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z">
+                          </path>
+                      </svg>
+                      <span class="about__github-link_text">Fork</span></a>
+                  <a href="#" class="about__github-link_count">4,999</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+
+
+
+
+  <section class="tools">
+    <div class="container">
+        <div class="tools__flex-body">
+            <div class="tools__title">
+                <h2 class="tools__text ">
+                    <span class="tools__text--position"><span>
+                            </span>Here is what</span> <span class="tools__text--position"> you get<span>></span>
+                        </span>
+                </h2>
+            </div>
+            <ul class="tools__list">
+                <li class="tools__item">
+                    <img src="src/img/tools/icon-search.png" alt="/" class="tools__img-search">
+                    <div class="tools__item-body">
+                        <h3 class="tools__item-title">Creatred to Make The Web Better</h3>
+                        <p class="tools__item-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+                            laoreet
+                            vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+                    </div>
+                </li>
+                <li class="tools__item">
+                    <img src="src/img/tools/icon-speed.png" alt="/" class="tools__img-speed">
+                    <div class="tools__item-body">
+                        <h3 class="tools__item-title">Incredibly Powerful Tool</h3>
+                        <p class="tools__item-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+                            odio,
+                            ut
+                            volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat
+                            volutpat.</p>
+                    </div>
+                </li>
+                <li class="tools__item">
+                    <img src="src/img/tools/icon-experimental.png" alt="/" class="tools__img-experimental">
+                    <div class="tools__item-body">
+                        <h3 class="tools__item-title">Experimental Stuff</h3>
+                        <p class="tools__item-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+                            odio,
+                            ut
+                            volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat
+                            volutpat.</p>
+                    </div>
+                </li>
+                <li class="tools__item">
+                    <img src="src/img/tools/icon-watch.png" alt="/" class="tools__img-watch">
+                    <div class="tools__item-body">
+                        <h3 class="tools__item-title">Creatred to Make The Web Better</h3>
+                        <p class="tools__item-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+                            odio,
+                            ut
+                            volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat
+                            volutpat.</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="tools__editor">
+                <div class="tools__editor-img"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
     <script src="./dist/js/scripts.min.js"></script>
   </body>
 </html>
