--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img
               src="./dist/img/logo-hover.png"
               alt="logo"
-              class="logo--hover"
+              class="logo--hover" asdas
             />
             <a href="#" class="logo__title">forkio</a>
           </div>
