--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="reviews__wrapper">
           <div class="reviews__item">
             <img
-              src="./dist/img/Logo1.png"
+              src="./dist/img/logo1.png"
               alt="smashing"
               width="165"
               height="43"
@@ -241,7 +241,7 @@
           </div>
           <div class="reviews__item">
             <img
-              src="./dist/img/Logo2.png"
+              src="./dist/img/logo2.png"
               alt="codrops"
               width="148"
               height="50"
@@ -252,7 +252,7 @@
             </p>
           </div>
           <div class="reviews__item">
-            <img src="./dist/img/Logo3.png" alt="w" width="64" height="64" />
+            <img src="./dist/img/logo3.png" alt="w" width="64" height="64" />
             <p class="reviews__text">
               In efficitur in velit et tempus. Duis nec odio dapibus, suscipit
               erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac
@@ -261,7 +261,7 @@
           </div>
           <div class="reviews__item">
             <img
-              src="./dist/img/Logo4.png"
+              src="./dist/img/logo4.png"
               alt="pixel"
               width="225"
               height="24"
@@ -274,7 +274,7 @@
           </div>
           <div class="reviews__item">
             <img
-              src="./dist/img/Logo5.png"
+              src="./dist/img/logo5.png"
               alt="creative"
               width="166"
               height="34"
@@ -285,7 +285,7 @@
             </p>
           </div>
           <div class="reviews__item">
-            <img src="./dist/img/Logo6.png" alt="tnw" width="108" height="34" />
+            <img src="./dist/img/logo6.png" alt="tnw" width="108" height="34" />
             <p class="reviews__text">
               Fusce pharetra erat id odio blandit, nec pharetra eros venenatis.
               Pellentesque porttitor cursus massa et vestibulum.
